ecmascript/parser/tests/typescript-errors/type-only-import-specifier/missing-as/input.ts.stderr
error: Expected ',', got 'bar'
 --> $DIR/tests/typescript-errors/type-only-import-specifier/missing-as/input.ts:1:19
  |
1 | import { type foo bar } from 'mod'
  |                   ^^^

