ecmascript/parser/tests/typescript-errors/type-only-import-specifier/missing-as/input.ts
import { type foo bar } from 'mod'
